crates/patok-tui/tests/snapshots/ui__view__one_header_two_frames_and_no_explore_strip.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
             ┌ Builder ───────────────────────────────────────────────── 00:00 ┐
[ Research  ]│── T1.2: add the parser for task files                           │
      ↓      │working on it                                                    │
[   Plan    ]│                                                                 │
      ↓      │                                                                 │
[   Build   ]│                                                                 │
      ↓      │                                                                 │
[  Review   ]│                                                                 │
             │                                                                 │
[   Ship    ]│                                                                 │
[ Discover  ]│                                                                 │
[ Learnings ]│                                                                 │
             │                                                                 │
             │                                                                 │
             │ v rail view · ↑↓ scroll · PgUp/PgDn page · End follow           │
             └─────────────────────────────────────────────────────────────────┘
             ┌ Tasks | 1/3 - 2 left ───────────────────────────────────────────┐
             │✔ T1.1  scaffold the workspace                                   │
             │▶ T1.2  add the parser for task files                            │
             │○ T1.3  wire the engine to the shell                             │
             │                                                                 │
             │                                                                 │
             └─────────────────────────────────────────────────────────────────┘
 RUNNING  sprint     Esc  stop build  ?  settings  t  theme  d  detach  q  quit
